--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
       "react-app/jest"
     ]
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
